# IOTmasterCtrl

./: .gitignore  CMakeLists.txt  README.md  auto.sh  rk3568-toolchain.cmake  stu.db  workspace.code-workspace  zlog.conf
inc/: dev_info.h  mr_protocol.h  my_sqlite3.h  node_info.h
src/: CMakeLists.txt  dev_info.c  device.c  main_ctrl.c  mr_protocol.c  my_sqlite3.c
